
Version 5.0.5 (unreleased)
==========================

User changes
------------

- GUI: enable "separate meshes" writer option (already available
  through user functions) through the GUI. This option allows for
  separate sub-writers being used for each associated mesh (avoiding
  the frequent need for the "Separate Blocks" operation in ParaView).

Bug fixes
---------

- Fix in Rij EBRSM coupled solver (improve robustness).

- "separate_meshes" writer option should not propagate to EnSight
  mesh groups output.

- Fix issue #246 (crash in cs_selector_get_cells_boundary / getceb).

- Fix computation of pressure gradient in lagrangian equations for some cases:
  * retrieve 2/3*rho*k from P if an EVM turbulence model is enabled
  * retrieve rho0*g from grad(P) even if iphydr=1.

- Fix in post-processing of wrong user boundary conditions.

- Fix implicit part of the Coriolis source term in the momentum
  (turbomachinery module).

- Salome_CFD: fix launch for user builds where CS_ROOT_DIR is not defined.

- Fix link with user functions for movable builds linking directly with
  Catalyst (e.g. Salome_CFD).

- GUI: fix handling of exchange coefficient boundary conditions.

- Fix automatic installer crash due to malformed string format.

- Fix in radiative FSCK model.

- Fix "code_saturne submit" whith mesh import only mode.

- Fix issue #243 (error in balance by zone the kinematic outlet term).

- Fix for EBRSM with irijco=1 and floatation terms.

- Fix launch of convergence tracking graphical tool when using Qt5.

- Fix issue #239 relative to cooling tower module run in parallel.

- When importing CGNS files and requiring additional groups for mesh
  sections or zones, do not try to build boundary face groups based
  on vertex boundary conditions; fixes crash in this combination.

- Salome_CFD:
  * fix build for some system combinations.
  * symbolic link files bug fixed.
  * setup.py save File action bug fixed.

Release 5.0.4 (Aug 24 2017)
===========================