@@ -13,6 +13,8 @@ User changes
 Bug fixes
 ---------
 
+- Fix interlock in Syrthes coupling when combining surface and volume coupling.
+
 - Fix in Rij EBRSM coupled solver (improve robustness).
 
 - "separate_meshes" writer option should not propagate to EnSight
